--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    name: test
+    name: CI / test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
