Fix CI status check name for branch protection

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,5 @@ jobs:
         with:
           node-version: 18
       - run: npm ci
-      - run: npm test -- --watchAll=false
+      - name: Run tests
+        run: npm test -- --watchAll=false
